# csc.teams

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  test_ldap_access.py
src/csc/teams/: __init__.py  configure.zcml  interfaces.py  utils.py  vocabularies.py
src/csc/teams/browser/: __init__.py  configure.zcml  views.py
src/csc/teams/browser/static/: teams.css
src/csc/teams/browser/templates/: team_view.pt
src/csc/teams/content/: __init__.py  team.py
src/csc/teams/profiles/default/: browserlayer.xml  types.xml
src/csc/teams/profiles/default/types/: Team.xml
src/csc/teams/profiles/uninstall/: browserlayer.xml  types.xml
